# pluine

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  book.toml  cliff.toml  typos.toml
crates/lex/: Cargo.toml
crates/lex/src/: comment.rs  error.rs  identifier.rs  lexer.rs  lib.rs  private.rs  scanner.rs  span.rs  token.rs
crates/lex/src/misc/: atmosphere.rs  escapes.rs  mod.rs  non_empty.rs  sign.rs  whitespace.rs
crates/lex/src/primitive/: boolean.rs  character.rs  mod.rs
crates/lex/src/primitive/number/: complex.rs  core.rs  decimal.rs  digit.rs  (+5 more)
crates/lex/tests/ui/: duplicate_span_attribute_named_struct.rs  duplicate_span_attribute_named_struct.stderr  duplicate_span_attribute_tuple_struct.rs  duplicate_span_attribute_tuple_struct.stderr  missing_fields_enum_variant.rs  missing_fields_enum_variant.stderr  missing_fields_tuple_struct.rs  missing_fields_tuple_struct.stderr  missing_span_attribute_name_struct.rs  missing_span_attribute_name_struct.stderr  missing_span_attribute_tuple_struct.rs  missing_span_attribute_tuple_struct.stderr  not_supported_unions.rs  not_supported_unions.stderr  not_supported_unit_enums.rs  not_supported_unit_enums.stderr  not_supported_unit_structs.rs  not_supported_unit_structs.stderr
crates/tokens/: Cargo.toml
crates/tokens/src/: boolean.rs  bytes.rs  character.rs  escapes.rs  identifier.rs  lib.rs  private.rs
crates/tokens/src/containers/: non_empty.rs
crates/tokens/src/number/: core.rs  decimal.rs  digit.rs  mod.rs  non_number.rs  prefix.rs  radix.rs  suffix.rs
crates/tokens/src/string/: mod.rs
(+57 files in other folders)
