[package]
name = "pluine-lex"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal
pluine-lex-macros.workspace = true

[lints]
workspace = true

[dev-dependencies]
trybuild = "1.0"
