[package]
name = "pluine-tokens"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
unicode = ["dep:unicode-general-category"]

[lints]
workspace = true

[dependencies]
unicode-general-category = { workspace = true, optional = true }
